# prompt-repo

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  test_curl_categories.py  test_curl_prompts.py  test_curl_tags.py  test_debug.py  test_public_pages.py
app/: __init__.py  auth.py  categories.py  crud.py  database.py  main.py  models.py  prompts.py  public.py  schemas.py  tags.py
app/auth/: __init__.py
docs/: PRD.md  arch.md  design.md  impl.md  task-todo.md
static/css/: custom.css
static/images/: .gitkeep
static/js/: main.js
templates/: base.html  category.html  index.html  tag.html
tests/: test_auth.py  test_categories.py  test_database.py  test_prompts.py  test_public_pages.py  test_tags.py  test_templates.py
